--- a/src/Layouts/DashboadLayouts.css
+++ b/src/Layouts/DashboadLayouts.css
@@ -16,24 +16,29 @@ body {
 
 .sidebar-not-active {
   transition: 0.3s ease all;
-  width: 6.8rem;
+  width: 6.3rem;
 }
 
 
 
 
-.sidebar-in .humburger {
-  text-align: right;
-}
-
+/* 
 .hamburger-react {
   right: 0 !important;
-}
-
-.humburger {
+} */
+/* .hum{
+  transition: 0.5s ease all;
+  left: 1;
+} */
+/* .humburger {
+  display: flex;
+  justify-content: center;
+} */
+/* .humburger1 {
   display: flex;
   justify-content: flex-end;
-}
+} */
+
 
 .sidebar-in {
   background: var(--primary-color);
@@ -58,22 +63,23 @@ body {
 
 }
 
-.sidebar Li {
+.sidebar Li  {
   width: 100%;
   transition: 0.5s ease;
 }
 
-.sidebar Li .li-a {
+.sidebar  .li-a  {
   color: white;
   text-decoration: none;
   align-items: center;
   display: flex;
-  display: inline-flex;
+  display: ;
   margin: 4px 0;
   height: 52px;
+  width: 58px;
   /* padding: 12px 12px; */
   text-align: center;
-  width: 100%;
+  /* width: 100%; */
   border-radius: 5px;
   /* transition: 0.9s ease all; */
   background-color: rgba(240, 248, 255, 0.103);
@@ -135,12 +141,15 @@ body {
   margin: 4px 0;
   height: 52px;
   text-align: center;
-  width: 100%;
   border-radius: 5px;
   background-color: rgba(240, 248, 255, 0.103);
   transform: scale(0.9);
   font-size: 15px;
   overflow: hidden; /* zaroori hai taake before/after overflow na kare */
+}
+
+.Li-b {
+  width: 100%;
 }
 
 /* .sidebar li .Li-always:hover{
