--- a/src/Layouts/DashboadLayouts.css
+++ b/src/Layouts/DashboadLayouts.css
@@ -9,14 +9,14 @@ body {
 
 .sidebar {
   height: 100vh;
-  transition: 0.3s ease all;
+  transition: 0.5s ease all;
   width: 18%;
   padding: 0px;
 }
 
 .sidebar-not-active {
-  transition: 0.3s ease all;
-  width: 6.3rem;
+  transition: 0.5s ease all;
+  width: 6.2rem;
 }
 
 
@@ -26,15 +26,17 @@ body {
 .hamburger-react {
   right: 0 !important;
 } */
-/* .hum{
-  transition: 0.5s ease all;
-  left: 1;
-} */
+.hum{
+  /* transition: 0.5s ease all; */
+  padding-right: 6px;
+  display: flex;
+  justify-content: flex-end;
+}
 /* .humburger {
   display: flex;
   justify-content: center;
-} */
-/* .humburger1 {
+}
+.humburger1 {
   display: flex;
   justify-content: flex-end;
 } */
@@ -73,10 +75,9 @@ body {
   text-decoration: none;
   align-items: center;
   display: flex;
-  display: ;
   margin: 4px 0;
   height: 52px;
-  width: 58px;
+  width: 57px;
   /* padding: 12px 12px; */
   text-align: center;
   /* width: 100%; */
@@ -133,7 +134,7 @@ body {
 
 .sidebar li .Li-always {
   position: relative;
-  transition: 0.5s ease all;
+  transition: 0.9s ease ;
   color: white;
   text-decoration: none;
   display: flex;
