--- a/src/Pages/Dashboard/Home.css
+++ b/src/Pages/Dashboard/Home.css
@@ -1,5 +1,6 @@
 :root {
     --primary-color: linear-gradient(126deg, rgba(2, 53, 77, 1) 38%, rgb(0, 33, 46) 100%);
+    /* --secondry : linear-gradient(135deg, rgba(red), rgba(var(yellow), rgba(blue, .75)) */
 }
 
 
