--- a/src/Layouts/DashboadLayouts.css
+++ b/src/Layouts/DashboadLayouts.css
@@ -10,7 +10,7 @@ body {
 .sidebar {
   height: 100vh;
   transition: 0.5s ease all;
-  width: 18%;
+  width: 300px;
   padding: 0px;
 }
 
@@ -18,6 +18,7 @@ body {
   transition: 0.5s ease all;
   width: 6.2rem;
 }
+
 
 
 
@@ -44,6 +45,8 @@ body {
 
 .sidebar-in {
   background: var(--primary-color);
+  
+   /* background: linear-gradient(135deg, rgba(var(red), .85), rgba(var(yellow), .2), rgba(var(green), .75)); */
   /* width: 100%; */
   height: 100%;
   color: white;
@@ -210,21 +213,21 @@ body {
 }
 
 .sidebar li .Li-always .span1{
-  transition: 1.5s ease all;
+  transition: 0.3s ease all;
 }
 
 .sidebar li .Li-always .span2{
-  transition: 1.8s ease all;
+  transition: 0.5s ease all;
 }
 
 .sidebar li .Li-always .span3{
-  transition: 2.1s ease all;
+  transition: 0.7s ease all;
 }
 
 .sidebar li .Li-always .span {
-  left: -120%;
+  left: -100%;
   opacity: 0;
-  transform: scale(0.0);
+  transform: scale(0.9);
 }
 
 
