--- a/src/Layouts/DashboadLayouts.css
+++ b/src/Layouts/DashboadLayouts.css
@@ -19,7 +19,7 @@ body {
 
 .sidebar-not-active {
   transition: 0.5s ease all;
-  width: 6rem;
+  width: 5.5rem;
 }
 
 
@@ -53,7 +53,7 @@ body {
   /* width: 100%; */
   height: 100%;
   color: white;
-  padding: 20px;
+  padding: 15px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -203,8 +203,9 @@ body {
 
 .sidebar Li .Li-always .icon {
   position: absolute;
-  left: 20px;
+  left: 18px;
   margin: 0;
+  font-size: 18px;
   padding: 0;
   display: inline-flex;
 }
